import { TabStack } from "../../../src/app-shell/tab-stack";

const PeopleLayout = () => <TabStack title="People" />;

export default PeopleLayout;
