...

export const unstable_settings = { initialRouteName: "songs" };

const TabStack = () => (
  <Stack
    screenOptions={({ navigation }) => ({
      headerBackTitle: "Back",
      headerLeft: navigation.getState().index > 0 ? undefined : RootLink,
    })}
  >
    <Stack.Screen
      name="songs"
      options={{ headerShown: false, title: "Songs" }}
...
